Incorporated the reporting mechanism

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,21 @@
-.DS_Store
+Attic/
+
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# TypeScript v1 declaration files
+typings/
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# VS data
+.vscode
+
