--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "test": "tests"
   },
   "scripts": {
-    "build": "tsc",
-    "generate": "node bin/main.js",
-    "ts": "ts-node src/main.ts",
+    "generate": "./node_modules/ts-node/dist/bin.js src/main.ts",
     "lint": "eslint . --ext .ts"
   },
   "repository": {
@@ -23,14 +21,15 @@
   },
   "homepage": "https://github.com/w3c/epub-tests#readme",
   "dependencies": {
-    "xml2js": "^0.4.23"
-  },
-  "devDependencies": {
     "@types/node": "^16.9.4",
     "@types/xml2js": "^0.4.9",
+    "ts-node": "^10.2.1",
+    "xml2js": "^0.4.23",
+    "typescript": "^4.4.3"
+  },
+  "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@typescript-eslint/parser": "^4.31.2",
-    "eslint": "^7.32.0",
-    "typescript": "^4.4.3"
+    "eslint": "^7.32.0"
   }
 }
