--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "generate": "./node_modules/ts-node/dist/bin.js src/main.ts",
+    "respec": "(cd results/drafts; ../../node_modules/respec/tools/respec2html.js --localhost  -s index.html -o ../index.html; ../../node_modules/respec/tools/respec2html.js --localhost -s tests.html -o ../tests.html)",
     "lint": "eslint . --ext .ts"
   },
   "repository": {
@@ -23,9 +24,10 @@
   "dependencies": {
     "@types/node": "^16.9.4",
     "@types/xml2js": "^0.4.9",
+    "respec": "^26.13.4",
     "ts-node": "^10.2.1",
-    "xml2js": "^0.4.23",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.31.2",
