Adding metadata is now o.k.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "generate": "./node_modules/ts-node/dist/bin.js src/main.ts",
     "respec": "(cd docs/drafts; ../../node_modules/respec/tools/respec2html.js --localhost  -s index.html -o ../index.html; ../../node_modules/respec/tools/respec2html.js --localhost -s results.html -o ../results.html)",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "extra_metadata": "./node_modules/ts-node/dist/bin.js src/add_metadata.ts"
   },
   "repository": {
     "type": "git",
