All the changes required by Dan's review

--- a/docs/drafts/config.json
+++ b/docs/drafts/config.json
@@ -18,7 +18,6 @@
         "Content Documents",
         "Navigation Documents",
         "Fixed Layout",
-        "Open Container Format",
-        "Package Rendering Metadata"
+        "Open Container Format"
     ]
 }
