thrown xml2js out from html.ts

--- a/docs/drafts/config.json
+++ b/docs/drafts/config.json
@@ -16,6 +16,7 @@
         "Package Documents",
         "Internationalization",
         "Content Documents",
+        "Scripting",
         "Navigation Documents",
         "Fixed Layout",
         "Open Container Format"
