Made textual changes

--- a/docs/drafts/config.json
+++ b/docs/drafts/config.json
@@ -19,6 +19,7 @@
         "Scripting",
         "Navigation Documents",
         "Fixed Layout",
-        "Open Container Format"
+        "Open Container Format",
+        "Media Overlays"
     ]
 }
