--- a/reports/apple-books-mac.json
+++ b/reports/apple-books-mac.json
@@ -1,131 +1,131 @@
 {
     "name": "Apple Books (Mac)",
-    "ref": "https://www.apple.com/books",
+    "ref": "https://www.apple.com/apple-books/",
     "tests": {
-    //     "cnt-css-support": false,
-    //     "cnt-mathml-support": false,
-    //     "cnt-svg-css-inclusion": false,
-    //     "cnt-svg-css-reference": false,
-    //     "cnt-svg-embedded": false,
-    //     "cnt-svg-support": false,
-    //     "cnt-xhtml-support": false,
-    //     "css-epub-hyphens": false,
-    //     "css-epub-line-break": false,
-    //     "css-epub-text-align-last": false,
-    //     "css-epub-text-combine-horizontal": false,
-    //     "css-epub-text-emphasis": false,
-    //     "css-epub-text-orientation": false,
-    //     "css-epub-text-transform": false,
-    //     "css-epub-text-underline-position": false,
-    //     "css-epub-word-break": false,
-    //     "css-epub-writing-mode": false,
-    //     "fxl-layout-duplication": false,
-    //     "fxl-layout-pre-paginated": false,
-    //     "fxl-layout-pre-paginated-spreads": false,
-    //     "fxl-orientation-landscape": false,
-    //     "fxl-orientation_default": false,
-    //     "fxl-orientation_duplication": false,
-    //     "fxl-page-spread-center": false,
-    //     "fxl-page-spread-combined": false,
-    //     "fxl-page-spread-left": false,
-    //     "fxl-page-spread-right": false,
-    //     "fxl-spread-auto": false,
-    //     "fxl-spread-both": false,
-    //     "fxl-spread_default": false,
-    //     "fxl-spread_landscape": false,
-    //     "fxl-spread_none": false,
-    //     "fxl-xhtml-icb": false,
-    //     "mol-audio-exceeding-clipend": false,
-    //     "mol-audio-no-clipbegin": false,
-    //     "mol-audio-no-clipend": false,
-    //     "mol-audio_no_clipbegin": false,
-    //     "mol-css": false,
-    //     "mol-embed": false,
-    //     "mol-embed_deactivate_playback": false,
-    //     "mol-embed_fxl": false,
-    //     "mol-timing-synchronization": false,
-    //     "mol-timing-synchronization_fxl": false,
-    //     "mol-timing-synchronization_multiple_audio": false,
-    //     "mol-tts_multi": false,
-    //     "mol-tts_single": false,
-    //     "nav-access": false,
-    //     "nav-activation": false,
-    //     "nav-spine_in-spine": false,
-    //     "nav-spine_in-spine-no-list-style": false,
-    //     "nav-spine_not-in-spine": false,
-    //     "ocf-package_arbitrary": false,
-    //     "ocf-package_multiple": false,
-    //     "ocf-url_link-leaking-relative": false,
-    //     "ocf-url_link-path-absolute": false,
-    //     "ocf-url_link-relative": false,
-    //     "ocf-url_manifest": false,
-    //     "ocf-url_origin": false,
-    //     "ocf-url_parse-leaking-relative": false,
-    //     "ocf-url_parse-path-absolute": false,
-    //     "ocf-url_relative": false,
-    //     "page-layout-both": false,
-    //     "page-layout-both-spread": false,
-    //     "pgk-lang_pkg_non_content": false,
-    //     "pgk-lang_pkg_non_content_dir": false,
-    //     "pkg-collections-unknown": false,
-    //     "pkg-creator-order": false,
-    //     "pkg-dir-auto_root-rtl": false,
-    //     "pkg-dir-auto_root-unset": false,
-    //     "pkg-dir_creator-rtl": false,
-    //     "pkg-dir_rtl-root-ltr": false,
-    //     "pkg-dir_rtl-root-unset": false,
-    //     "pkg-dir_unset-root-rtl": false,
-    //     "pkg-dir_unset-root-unset": false,
-    //     "pkg-flow-paginated": false,
-    //     "pkg-flow-scrolled-continuous": false,
-    //     "pkg-flow-scrolled-doc": false,
-    //     "pkg-linked-records": false,
-    //     "pkg-manifest-unknown": false,
-    //     "pkg-manifest-unlisted-resource": false,
-    //     "pkg-meta-unknown": false,
-    //     "pkg-meta-whitespace": false,
-    //     "pkg-spine-duplicate-item-hyperlink": false,
-    //     "pkg-spine-duplicate-item-rendering": false,
-    //     "pkg-spine-duplicate-item-ui": false,
-    //     "pkg-spine-nonlinear-activation": false,
-    //     "pkg-spine-order": false,
-    //     "pkg-spine-order-svg": false,
-    //     "pkg-spine-progression-default": false,
-    //     "pkg-spine-progression-pre-paginated": false,
-    //     "pkg-spine-progression_ltr": false,
-    //     "pkg-spine-progression_rtl": false,
-    //     "pkg-spine-unknown": false,
-         "pkg-title-order": true,
-    //     "pkg-unique-id": false,
-    //     "pkg-version-backward": false,
-    //     "pub-cmt-gif": false,
-    //     "pub-cmt-jpeg": false,
-    //     "pub-cmt-mp3": false,
-    //     "pub-cmt-mp4": false,
-    //     "pub-cmt-opus": false,
-    //     "pub-cmt-png": false,
-    //     "pub-cmt-svg": false,
-    //     "pub-cmt-webp": false,
-    //     "pub-data-urls_browsing-context": false,
-    //     "pub-data-urls_top-level-content": false,
-    //     "pub-external-links": false,
-    //     "pub-foreign_bad-fallback": false,
-    //     "pub-foreign_image": false,
-    //     "pub-foreign_json-spine": false,
-    //     "pub-foreign_xml-spine": false,
-    //     "pub-foreign_xml-suffix-spine": false,
-    //     "pub-xml-external-id": false,
-    //     "pub-xml-names": false,
-    //     "pub-xml-non-validating_invalid": false,
-    //     "pub-xml-non-validating_unclosed": false,
-    //     "scr-readingsystem-features": false,
-    //     "scr-readingsystem-support": false,
-    //     "scr-readingsystem-support_iframe": false,
-    //     "scr-readingsystem-support_iframe_svg": false,
-    //     "scr-readingsystem-support_svg": false,
-    //     "scr-support": false,
-    //     "scr-support_iframe": false,
-    //     "scr-support_origin": false,
-    //     "scr-support_svg": false
-    // }
+        "cnt-css-support": null,
+        "cnt-mathml-support": null,
+        "cnt-svg-css-inclusion": null,
+        "cnt-svg-css-reference": null,
+        "cnt-svg-embedded": null,
+        "cnt-svg-support": null,
+        "cnt-xhtml-support": null,
+        "css-epub-hyphens": null,
+        "css-epub-line-break": null,
+        "css-epub-text-align-last": null,
+        "css-epub-text-combine-horizontal": null,
+        "css-epub-text-emphasis": null,
+        "css-epub-text-orientation": null,
+        "css-epub-text-transform": null,
+        "css-epub-text-underline-position": null,
+        "css-epub-word-break": null,
+        "css-epub-writing-mode": null,
+        "fxl-layout-duplication": null,
+        "fxl-layout-pre-paginated": null,
+        "fxl-layout-pre-paginated-spreads": null,
+        "fxl-orientation-landscape": null,
+        "fxl-orientation_default": null,
+        "fxl-orientation_duplication": null,
+        "fxl-page-spread-center": null,
+        "fxl-page-spread-combined": null,
+        "fxl-page-spread-left": null,
+        "fxl-page-spread-right": null,
+        "fxl-spread-auto": null,
+        "fxl-spread-both": null,
+        "fxl-spread_default": null,
+        "fxl-spread_landscape": null,
+        "fxl-spread_none": null,
+        "fxl-xhtml-icb": null,
+        "mol-audio-exceeding-clipend": null,
+        "mol-audio-no-clipbegin": null,
+        "mol-audio-no-clipend": null,
+        "mol-audio_no_clipbegin": null,
+        "mol-css": null,
+        "mol-embed": null,
+        "mol-embed_deactivate_playback": null,
+        "mol-embed_fxl": null,
+        "mol-timing-synchronization": null,
+        "mol-timing-synchronization_fxl": null,
+        "mol-timing-synchronization_multiple_audio": null,
+        "mol-tts_multi": null,
+        "mol-tts_single": null,
+        "nav-access": null,
+        "nav-activation": null,
+        "nav-spine_in-spine": null,
+        "nav-spine_in-spine-no-list-style": null,
+        "nav-spine_not-in-spine": null,
+        "ocf-package_arbitrary": null,
+        "ocf-package_multiple": null,
+        "ocf-url_link-leaking-relative": null,
+        "ocf-url_link-path-absolute": null,
+        "ocf-url_link-relative": null,
+        "ocf-url_manifest": null,
+        "ocf-url_origin": null,
+        "ocf-url_parse-leaking-relative": null,
+        "ocf-url_parse-path-absolute": null,
+        "ocf-url_relative": null,
+        "page-layout-both": null,
+        "page-layout-both-spread": null,
+        "pgk-lang_pkg_non_content": null,
+        "pgk-lang_pkg_non_content_dir": null,
+        "pkg-collections-unknown": null,
+        "pkg-creator-order": null,
+        "pkg-dir-auto_root-rtl": null,
+        "pkg-dir-auto_root-unset": null,
+        "pkg-dir_creator-rtl": null,
+        "pkg-dir_rtl-root-ltr": null,
+        "pkg-dir_rtl-root-unset": null,
+        "pkg-dir_unset-root-rtl": null,
+        "pkg-dir_unset-root-unset": null,
+        "pkg-flow-paginated": null,
+        "pkg-flow-scrolled-continuous": null,
+        "pkg-flow-scrolled-doc": null,
+        "pkg-linked-records": null,
+        "pkg-manifest-unknown": null,
+        "pkg-manifest-unlisted-resource": null,
+        "pkg-meta-unknown": null,
+        "pkg-meta-whitespace": null,
+        "pkg-spine-duplicate-item-hyperlink": null,
+        "pkg-spine-duplicate-item-rendering": null,
+        "pkg-spine-duplicate-item-ui": null,
+        "pkg-spine-nonlinear-activation": null,
+        "pkg-spine-order": null,
+        "pkg-spine-order-svg": null,
+        "pkg-spine-progression-default": null,
+        "pkg-spine-progression-pre-paginated": null,
+        "pkg-spine-progression_ltr": null,
+        "pkg-spine-progression_rtl": null,
+        "pkg-spine-unknown": null,
+        "pkg-title-order": true,
+        "pkg-unique-id": null,
+        "pkg-version-backward": null,
+        "pub-cmt-gif": null,
+        "pub-cmt-jpeg": null,
+        "pub-cmt-mp3": null,
+        "pub-cmt-mp4": null,
+        "pub-cmt-opus": null,
+        "pub-cmt-png": null,
+        "pub-cmt-svg": null,
+        "pub-cmt-webp": null,
+        "pub-data-urls_browsing-context": null,
+        "pub-data-urls_top-level-content": null,
+        "pub-external-links": null,
+        "pub-foreign_bad-fallback": null,
+        "pub-foreign_image": null,
+        "pub-foreign_json-spine": null,
+        "pub-foreign_xml-spine": null,
+        "pub-foreign_xml-suffix-spine": null,
+        "pub-xml-external-id": null,
+        "pub-xml-names": null,
+        "pub-xml-non-validating_invalid": null,
+        "pub-xml-non-validating_unclosed": null,
+        "scr-readingsystem-features": null,
+        "scr-readingsystem-support": null,
+        "scr-readingsystem-support_iframe": null,
+        "scr-readingsystem-support_iframe_svg": null,
+        "scr-readingsystem-support_svg": null,
+        "scr-support": null,
+        "scr-support_iframe": null,
+        "scr-support_origin": null,
+        "scr-support_svg": null
+    }
 }
