Stupid mistake in the action script...

--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -32,7 +32,7 @@ jobs:
           git add docs/drafts/fragments/*.html
           git add docs/drafts/*.html
           git add reports/xx-*.json
-          git add opds/*.json
+          git add docs/opds/*.json
           git commit -am "Automated report generation"
           git push origin main
 
