--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "url": "git+https://github.com/w3c/epub-tests.git"
   },
   "author": "Ivan Herman, Dan Lazin",
-  "license": "ISC",
+  "license": "W3C-20150513",
   "bugs": {
     "url": "https://github.com/w3c/epub-tests/issues"
   },
