Added tests to show structural semantics support and proper behaviour v.a.v. unallowed elements.

--- a/docs/drafts/config.json
+++ b/docs/drafts/config.json
@@ -20,6 +20,7 @@
         "Navigation Documents",
         "Fixed Layout",
         "Open Container Format",
-        "Media Overlays"
+        "Media Overlays",
+        "Structural Semantics"
     ]
 }
