Implementation report for all cnt-* tests in Apple Books on macOS

--- a/reports/apple-macos.json
+++ b/reports/apple-macos.json
@@ -3,14 +3,14 @@
     "ref": "https://www.apple.com/apple-books/",
     "variant" : "macOS",
     "tests": {
-        "cnt-css-fonts": null,
-        "cnt-mathml-support": null,
-        "cnt-svg-css": null,
-        "cnt-svg-css-inclusion": null,
-        "cnt-svg-css-reference": null,
-        "cnt-svg-embedded": null,
-        "cnt-svg-support": null,
-        "cnt-xhtml-support": null,
+        "cnt-css-fonts": true,
+        "cnt-mathml-support": true,
+        "cnt-svg-css": true,
+        "cnt-svg-css-inclusion": true,
+        "cnt-svg-css-reference": true,
+        "cnt-svg-embedded": true,
+        "cnt-svg-support": true,
+        "cnt-xhtml-support": true,
         "css-epub-hyphens": null,
         "css-epub-line-break": null,
         "css-epub-text-align-last": null,
