Implementation report for all css-* tests in Apple Books on macOS

--- a/reports/apple-macos.json
+++ b/reports/apple-macos.json
@@ -11,16 +11,16 @@
         "cnt-svg-embedded": true,
         "cnt-svg-support": true,
         "cnt-xhtml-support": true,
-        "css-epub-hyphens": null,
+        "css-epub-hyphens": true,
         "css-epub-line-break": null,
-        "css-epub-text-align-last": null,
-        "css-epub-text-combine-horizontal": null,
-        "css-epub-text-emphasis": null,
-        "css-epub-text-orientation": null,
-        "css-epub-text-transform": null,
-        "css-epub-text-underline-position": null,
-        "css-epub-word-break": null,
-        "css-epub-writing-mode": null,
+        "css-epub-text-align-last": false,
+        "css-epub-text-combine-horizontal": false,
+        "css-epub-text-emphasis": false,
+        "css-epub-text-orientation": true,
+        "css-epub-text-transform": false,
+        "css-epub-text-underline-position": false,
+        "css-epub-word-break": true,
+        "css-epub-writing-mode": false,
         "fxl-layout-default": null,
         "fxl-layout-duplication": null,
         "fxl-layout-pre-paginated": null,
