Implementation report for all nav-* tests in Apple Books on macOS

--- a/reports/apple-macos.json
+++ b/reports/apple-macos.json
@@ -1,7 +1,7 @@
 {
     "name": "Apple Books",
     "ref": "https://www.apple.com/apple-books/",
-    "variant" : "macOS",
+    "variant" : "macOS (Books 4.4)",
     "tests": {
         "cnt-css-fonts": true,
         "cnt-mathml-support": true,
@@ -61,11 +61,11 @@
         "mol-timing-synchronization_svg": null,
         "mol-tts_multi": null,
         "mol-tts_single": null,
-        "nav-access": null,
-        "nav-activation": null,
-        "nav-spine_in-spine": null,
-        "nav-spine_in-spine-no-list-style": null,
-        "nav-spine_not-in-spine": null,
+        "nav-access": true,
+        "nav-activation": true,
+        "nav-spine_in-spine": true,
+        "nav-spine_in-spine-no-list-style": true,
+        "nav-spine_not-in-spine": true,
         "ocf-font_obfuscation": null,
         "ocf-font_obfuscation-bis": null,
         "ocf-metainf-inc": null,
