Implementation report for all ocf-* tests in Apple Books on macOS

--- a/reports/apple-macos.json
+++ b/reports/apple-macos.json
@@ -66,22 +66,22 @@
         "nav-spine_in-spine": true,
         "nav-spine_in-spine-no-list-style": true,
         "nav-spine_not-in-spine": true,
-        "ocf-font_obfuscation": null,
-        "ocf-font_obfuscation-bis": null,
-        "ocf-metainf-inc": null,
-        "ocf-metainf-manifest": null,
-        "ocf-package_arbitrary": null,
-        "ocf-package_multiple": null,
-        "ocf-url_link-leaking-relative": null,
-        "ocf-url_link-path-absolute": null,
-        "ocf-url_link-relative": null,
-        "ocf-url_manifest": null,
-        "ocf-url_origin": null,
-        "ocf-url_parse-leaking-relative": null,
-        "ocf-url_parse-path-absolute": null,
-        "ocf-url_relative": null,
-        "ocf-zip-comp": null,
-        "ocf-zip-mult": null,
+        "ocf-font_obfuscation": true,
+        "ocf-font_obfuscation-bis": false,
+        "ocf-metainf-inc": true,
+        "ocf-metainf-manifest": true,
+        "ocf-package_arbitrary": true,
+        "ocf-package_multiple": true,
+        "ocf-url_link-leaking-relative": false,
+        "ocf-url_link-path-absolute": false,
+        "ocf-url_link-relative": false,
+        "ocf-url_manifest": true,
+        "ocf-url_origin": false,
+        "ocf-url_parse-leaking-relative": true,
+        "ocf-url_parse-path-absolute": true,
+        "ocf-url_relative": true,
+        "ocf-zip-comp": true,
+        "ocf-zip-mult": true,
         "page-layout-both": null,
         "page-layout-both-spread": null,
         "pkg-collections-unknown": null,
