--- a/reports/apple-macos.json
+++ b/reports/apple-macos.json
@@ -82,43 +82,43 @@
         "ocf-url_relative": true,
         "ocf-zip-comp": true,
         "ocf-zip-mult": true,
-        "page-layout-both": null,
-        "page-layout-both-spread": null,
-        "pkg-collections-unknown": null,
-        "pkg-creator-order": null,
-        "pkg-dir-auto_root-rtl": null,
-        "pkg-dir-auto_root-unset": null,
-        "pkg-dir_but_not_content": null,
-        "pkg-dir_creator-rtl": null,
-        "pkg-dir_rtl-root-ltr": null,
-        "pkg-dir_rtl-root-unset": null,
-        "pkg-dir_unset-root-rtl": null,
-        "pkg-dir_unset-root-unset": null,
-        "pkg-flow-paginated": null,
-        "pkg-flow-scrolled-continuous": null,
-        "pkg-flow-scrolled-doc": null,
-        "pkg-lang_but_not_content": null,
+        "page-layout-both": false,
+        "page-layout-both-spread": false,
+        "pkg-collections-unknown": true,
+        "pkg-creator-order": true,
+        "pkg-dir-auto_root-rtl": false,
+        "pkg-dir-auto_root-unset": false,
+        "pkg-dir_but_not_content": true,
+        "pkg-dir_creator-rtl": false,
+        "pkg-dir_rtl-root-ltr": false,
+        "pkg-dir_rtl-root-unset": false,
+        "pkg-dir_unset-root-rtl": false,
+        "pkg-dir_unset-root-unset": false,
+        "pkg-flow-paginated": true,
+        "pkg-flow-scrolled-continuous": false,
+        "pkg-flow-scrolled-doc": false,
+        "pkg-lang_but_not_content": false,
         "pkg-linked-records": null,
         "pkg-linked-records_link-order": null,
         "pkg-linked-records_link-priority": null,
-        "pkg-manifest-unknown": null,
-        "pkg-manifest-unlisted-resource": null,
-        "pkg-meta-unknown": null,
-        "pkg-meta-whitespace": null,
-        "pkg-spine-duplicate-item-hyperlink": null,
-        "pkg-spine-duplicate-item-rendering": null,
-        "pkg-spine-duplicate-item-ui": null,
-        "pkg-spine-nonlinear-activation": null,
-        "pkg-spine-order": null,
-        "pkg-spine-order-svg": null,
-        "pkg-spine-progression-default": null,
-        "pkg-spine-progression-pre-paginated": null,
-        "pkg-spine-progression_ltr": null,
-        "pkg-spine-progression_rtl": null,
-        "pkg-spine-unknown": null,
-        "pkg-title-order": null,
-        "pkg-unique-id": null,
-        "pkg-version-backward": null,
+        "pkg-manifest-unknown": true,
+        "pkg-manifest-unlisted-resource": true,
+        "pkg-meta-unknown": true,
+        "pkg-meta-whitespace": true,
+        "pkg-spine-duplicate-item-hyperlink": false,
+        "pkg-spine-duplicate-item-rendering": false,
+        "pkg-spine-duplicate-item-ui": false,
+        "pkg-spine-nonlinear-activation": true,
+        "pkg-spine-order": true,
+        "pkg-spine-order-svg": true,
+        "pkg-spine-progression-default": true,
+        "pkg-spine-progression-pre-paginated": true,
+        "pkg-spine-progression_ltr": true,
+        "pkg-spine-progression_rtl": true,
+        "pkg-spine-unknown": true,
+        "pkg-title-order": true,
+        "pkg-unique-id": true,
+        "pkg-version-backward": true,
         "pss-support": null,
         "pss-support_ignore-title": null,
         "pub-cmt-gif": null,
