Implementation report for all pss-* and pub-* tests in Apple Books on macOS

--- a/reports/apple-macos.json
+++ b/reports/apple-macos.json
@@ -119,29 +119,29 @@
         "pkg-title-order": true,
         "pkg-unique-id": true,
         "pkg-version-backward": true,
-        "pss-support": null,
-        "pss-support_ignore-title": null,
-        "pub-cmt-gif": null,
-        "pub-cmt-jpeg": null,
-        "pub-cmt-mp3": null,
-        "pub-cmt-mp4": null,
-        "pub-cmt-opus": null,
-        "pub-cmt-png": null,
-        "pub-cmt-svg": null,
-        "pub-cmt-webp": null,
-        "pub-data-urls_browsing-context": null,
-        "pub-data-urls_top-level-content": null,
-        "pub-external-links": null,
-        "pub-external-links_consent": null,
-        "pub-foreign_bad-fallback": null,
-        "pub-foreign_image": null,
-        "pub-foreign_json-spine": null,
-        "pub-foreign_xml-spine": null,
-        "pub-foreign_xml-suffix-spine": null,
-        "pub-xml-external-id": null,
-        "pub-xml-names": null,
-        "pub-xml-non-validating_invalid": null,
-        "pub-xml-non-validating_unclosed": null,
+        "pss-support": true,
+        "pss-support_ignore-title": false,
+        "pub-cmt-gif": true,
+        "pub-cmt-jpeg": true,
+        "pub-cmt-mp3": true,
+        "pub-cmt-mp4": true,
+        "pub-cmt-opus": false,
+        "pub-cmt-png": true,
+        "pub-cmt-svg": true,
+        "pub-cmt-webp": true,
+        "pub-data-urls_browsing-context": true,
+        "pub-data-urls_top-level-content": true,
+        "pub-external-links": true,
+        "pub-external-links_consent": true,
+        "pub-foreign_bad-fallback": false,
+        "pub-foreign_image": false,
+        "pub-foreign_json-spine": false,
+        "pub-foreign_xml-spine": false,
+        "pub-foreign_xml-suffix-spine": false,
+        "pub-xml-external-id": false,
+        "pub-xml-names": true,
+        "pub-xml-non-validating_invalid": false,
+        "pub-xml-non-validating_unclosed": true,
         "scr-not-support_ccscript-modify-host": null,
         "scr-not-support_ccscript-modify-size": null,
         "scr-readingsystem-features": null,
