--- a/reports/apple-macos.json
+++ b/reports/apple-macos.json
@@ -142,19 +142,19 @@
         "pub-xml-names": true,
         "pub-xml-non-validating_invalid": false,
         "pub-xml-non-validating_unclosed": true,
-        "scr-not-support_ccscript-modify-host": null,
-        "scr-not-support_ccscript-modify-size": null,
-        "scr-readingsystem-features": null,
-        "scr-readingsystem-support": null,
-        "scr-readingsystem-support_iframe": null,
-        "scr-readingsystem-support_iframe_svg": null,
-        "scr-readingsystem-support_svg": null,
-        "scr-support": null,
+        "scr-not-support_ccscript-modify-host": false,
+        "scr-not-support_ccscript-modify-size": false,
+        "scr-readingsystem-features": true,
+        "scr-readingsystem-support": true,
+        "scr-readingsystem-support_iframe": true,
+        "scr-readingsystem-support_iframe_svg": true,
+        "scr-readingsystem-support_svg": true,
+        "scr-support": true,
         "scr-support-fallback": null,
-        "scr-support_iframe": null,
-        "scr-support_origin": null,
-        "scr-support_scrolled-continuous": null,
-        "scr-support_scrolled-doc": null,
-        "scr-support_svg": null
+        "scr-support_iframe": true,
+        "scr-support_origin": true,
+        "scr-support_scrolled-continuous": false,
+        "scr-support_scrolled-doc": false,
+        "scr-support_svg": true
     }
 }
