fixing submitted tests and template

--- a/reports/apple-ios.json
+++ b/reports/apple-ios.json
@@ -21,30 +21,30 @@
         "css-epub-text-underline-position": false,
         "css-epub-word-break": false,
         "css-epub-writing-mode": true,
-        "fxl-layout-default": true,
+        "lay-fxl-layout-default": true,
         "fxl-layout-duplication": false,
-        "fxl-layout-pre-paginated": true,
-        "fxl-layout-pre-paginated-spreads": true,
-        "fxl-orientation-landscape": true,
-        "fxl-orientation_default": true,
+        "lay-fxl-layout-pre-paginated": true,
+        "lay-fxl-layout-pre-paginated-spreads": true,
+        "lay-fxl-orientation-landscape": true,
+        "lay-fxl-orientation-default": true,
         "fxl-orientation_duplication": false,
         "fxl-page-spread-center": false,
-        "fxl-page-spread-combined": true,
-        "fxl-page-spread-left": false,
-        "fxl-page-spread-right": false,
+        "lay-fxl-page-spread-combined": true,
+        "lay-fxl-page-spread-left": false,
+        "lay-fxl-page-spread-right": false,
         "fxl-spine-overrides_behave-as-global": false,
         "fxl-spine-overrides_behave-as-global-bis": true,
         "fxl-spine-overrides_duplicate": false,
-        "fxl-spread-auto": true,
-        "fxl-spread-both": true,
-        "fxl-spread_default": true,
-        "fxl-spread_landscape": false,
-        "fxl-spread_none": true,
-        "fxl-svg-icb_multi": false,
-        "fxl-xhtml-icb": true,
-        "fxl-xhtml-icb_multi": false,
-        "fxl-xhtml-icb_multi_declarations": true,
-        "fxl-xhtml-icb_units": true,
+        "lay-fxl-spread-auto": true,
+        "lay-fxl-spread-both": true,
+        "lay-fxl-spread-default": true,
+        "lay-fxl-spread-landscape": false,
+        "lay-fxl-spread-none": true,
+        "lay-fxl-svg-icb_multi": false,
+        "lay-fxl-xhtml-icb": true,
+        "lay-fxl-xhtml-icb_multi": false,
+        "lay-fxl-xhtml-icb_multi_declarations": true,
+        "lay-fxl-xhtml-icb_units": true,
         "mol-audio": null,
         "mol-audio-exceeding-clipend": null,
         "mol-audio-no-clipbegin": null,
@@ -82,8 +82,8 @@
         "ocf-url_relative": true,
         "ocf-zip-comp": true,
         "ocf-zip-mult": true,
-        "page-layout-both": true,
-        "page-layout-both-spread": false,
+        "lay-page-layout-both": true,
+        "lay-page-layout-both-spread": false,
         "pkg-collections-unknown": true,
         "pkg-creator-order": true,
         "pkg-dir-auto_root-rtl": false,
@@ -94,9 +94,9 @@
         "pkg-dir_rtl-root-unset": false,
         "pkg-dir_unset-root-rtl": false,
         "pkg-dir_unset-root-unset": true,
-        "pkg-flow-paginated": true,
-        "pkg-flow-scrolled-continuous": false,
-        "pkg-flow-scrolled-doc": false,
+        "lay-pkg-flow-paginated": true,
+        "lay-pkg-flow-scrolled-continuous": false,
+        "lay-pkg-flow-scrolled-doc": false,
         "pkg-lang_but_not_content": true,
         "pkg-linked-records": true,
         "pkg-linked-records_link-order": false,
