New category for fallbacks

--- a/docs/drafts/config.json
+++ b/docs/drafts/config.json
@@ -14,6 +14,7 @@
         "Publication Resources",
         "Core Media Types",
         "Package Documents",
+        "Manifest Fallbacks",
         "Internationalization",
         "Content Documents",
         "Navigation Documents",
