--- a/reports/apple-ios.json
+++ b/reports/apple-ios.json
@@ -45,22 +45,22 @@
         "lay-fxl-xhtml-icb_multi": false,
         "lay-fxl-xhtml-icb_multi_declarations": true,
         "lay-fxl-xhtml-icb_units": true,
-        "mol-audio": null,
-        "mol-audio-exceeding-clipend": null,
-        "mol-audio-no-clipbegin": null,
-        "mol-audio-no-clipend": null,
-        "mol-css": null,
-        "mol-ignore": null,
-        "mol-navigation": null,
-        "mol-support_xhtml": null,
-        "mol-support_xhtml-load": null,
-        "mol-support_xhtml-load-next": null,
-        "mol-timing-synchronization": null,
-        "mol-timing-synchronization_fxl": null,
-        "mol-timing-synchronization_multiple_audio": null,
-        "mol-timing-synchronization_svg": null,
-        "mol-tts_multi": null,
-        "mol-tts_single": null,
+        "mol-audio": true,
+        "mol-audio-exceeding-clipend": true,
+        "mol-audio-no-clipbegin": true,
+        "mol-audio-no-clipend": false,
+        "mol-css": false,
+        "mol-ignore": "n/a",
+        "mol-navigation": true,
+        "mol-support_xhtml": true,
+        "mol-support_xhtml-load": true,
+        "mol-support_xhtml-load-next": true,
+        "mol-timing-synchronization": false,
+        "mol-timing-synchronization_fxl": true,
+        "mol-timing-synchronization_multiple_audio": true,
+        "mol-timing-synchronization_svg": true,
+        "mol-tts_multi": false,
+        "mol-tts_single": false,
         "nav-access": true,
         "nav-activation": true,
         "nav-spine_in-spine": true,
