--- a/reports/apple-macos.json
+++ b/reports/apple-macos.json
@@ -156,6 +156,7 @@
         "scr-support-fallback": null,
         "scr-support_iframe": true,
         "scr-support_origin": true,
+        "scr-support_origin_unique": true,
         "scr-support_scrolled-continuous": false,
         "scr-support_scrolled-doc": false,
         "scr-support_svg": true
