Add reports for network and fix small EPUB error

--- a/reports/apple-ios.json
+++ b/reports/apple-ios.json
@@ -158,6 +158,7 @@
         "scr-support_origin": true,
         "scr-support_scrolled-continuous": null,
         "scr-support_scrolled-doc": null,
-        "scr-support_svg": true
+        "scr-support_svg": true,
+        "sec-untrusted-consent_network.epub": true
     }
 }
