--- a/docs/drafts/config.json
+++ b/docs/drafts/config.json
@@ -8,6 +8,22 @@
         {
             "from": "https://www.w3.org/TR/epub-33/",
             "to": "https://w3c.github.io/epub-specs/epub33/core/"
+        },
+        {
+            "from": "https://www.w3.org/TR/epub-rs-34/",
+            "to": "https://w3c.github.io/epub-specs/epub34/rs/"
+        },
+        {
+            "from": "https://www.w3.org/TR/epub-34/",
+            "to": "https://w3c.github.io/epub-specs/epub34/authoring/"
+        },
+        {
+            "from": "https://www.w3.org/TR/epub-rs/",
+            "to": "https://w3c.github.io/epub-specs/epub34/rs/"
+        },
+        {
+            "from": "https://www.w3.org/TR/epub/",
+            "to": "https://w3c.github.io/epub-specs/epub34/authoring/"
         }
     ],
     "coverage_labels": [
