--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "epub-tests",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "Automatic reporting of EPUB 3 testing results",
   "directories": {
     "test": "tests"
@@ -11,6 +11,7 @@
     "respec": "(cd docs/drafts; ../../node_modules/respec/tools/respec2html.js --localhost  -s index.html -o ../index.html; ../../node_modules/respec/tools/respec2html.js --localhost -s results.html -o ../results.html)",
     "lint": "eslint . --ext .ts",
     "add_metadata": "./node_modules/ts-node/dist/bin.js src/add_metadata.ts",
+    "massage_metadata": "./node_modules/ts-node/dist/bin.js src/massage_metadata.ts",
     "modify_metadata": "./node_modules/ts-node/dist/bin.js src/change_opf.ts"
   },
   "repository": {
