--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -39,21 +39,13 @@ jobs:
         run: |
           (cd src; deno run -A main.ts)
           rm src/deno.lock
-      - name: Deploy
-        # Push to gh pages only part of the repository
-        # The commented portion below is the standard
-        # set of actions to push the full repository
-        uses: peaceiris/actions-gh-pages@v4
+      - name: Setup Github Pages
+        uses: actions/configure-pages@v5
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs
-      # - name: Setup Github Pages
-      #   uses: actions/configure-pages@v5
-      # - name: Upload artifact
-      #   uses: actions/upload-pages-artifact@v3
-      #   with:
-      #     # Upload entire repository
-      #     path: '.'
-      # - name: Deploy to GitHub Pages
-      #   id: deployment
-      #   uses: actions/deploy-pages@v4
+          # Upload entire repository
+          path: '.'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
