--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -5,7 +5,7 @@ name: Publish to Github Pages
 on:
   push:
     branches: [main]
-    paths: ["reports/**", "tests/**", "src/**", "docs/*.html", "docs/contributing.md", "docs/config.json"]
+    paths: ["reports/**", "tests/**", "generate/src/**", "index.html", "results.html", "contributing.md", "generate/config.json"]
 
   # Allows workflow to be triggered manually from the Actions tab
   workflow_dispatch:
