change configuration to include roll

--- a/generate/config.json
+++ b/generate/config.json
@@ -34,7 +34,8 @@
         "Internationalization",
         "Content Documents",
         "Navigation Documents",
-        "Fixed Layout",
+        "Pre-paginated Layout",
+        "Roll Layout",
         "Open Container Format",
         "Scripting",
         "Media Overlays",
